# jdsetup

./: .gitignore  README.md  build.py  pyproject.toml
jdsetup/fdshape/: decoder.py  encoder.c
jdsetup/gs3/: common.py  gs3.py
jdsetup/gs3/config/: ImportExport.xml  file_schema_version.json  setup.json  setup_participant.json  setup_source_app.json  spatialcatalog.json  spatialcatalog_file_schema_version.json  spatialcatalog_source_app.json  synchronization.json
jdsetup/gs3/fdshape/: __init__.py  fdShape_decoder_spec.ksy
jdsetup/gs3/models/: __init__.py  basic_types.py  spatial_types.py
jdsetup/gs3/models/rcd/: __init__.py  setup.py  spatial_catalog.py
jdsetup/models/: __init__.py  basic_types.py
jdsetup/models/rcd/: __init__.py  setup.py  spatial_catalog.py
